--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8" />
+	
+	<title>n9te</title>
+	
+	<style>
+		body {
+			background : #CDCDCD;
+			margin : 0;
+			padding : 0;
+			font-family : "Helvetica","Arial";
+		}
+
+	</style>
+</head>
+
 <body>
 
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
+	<div>
+		<p>
+			nate trank
+		</p>
+		<a href="www.instagram.com/n9te">n9te</a>
+	</div>
 
 </body>
+	
 </html>
