--- a/index.html
+++ b/index.html
@@ -8,10 +8,60 @@
 	
 	<style>
 		body {
-			background : #CDCDCD;
+			background : #F8F3EA;
 			margin : 0;
 			padding : 0;
-			font-family : "Helvetica","Arial";
+			font-family : "Courier New";
+		}
+		
+		#box {
+			background : #200803;
+			padding-left : 0px;
+			padding-top : 1px;
+			padding-bottom : 14px;
+			height : 100px;
+			width : 500px;
+			margin-left : 390px;
+			margin-top : 200px;
+			font-size : 40px;
+			text-align : center;
+			color : #FFFFFF;
+		}
+		
+		#box p:hover {
+			font-style : italic;
+			color : #FFFFFF;
+		}
+		
+		#links {
+			padding-left : 0px;
+			width : 500px;
+			margin-left : 390px;
+			margin-top : 15px;
+			font-size : 18px;
+			text-align : center;
+		}
+		
+		li {
+			display : inline;
+			float : center;
+		}
+		
+		li a {
+			text-align : center;
+			padding : 14px 30px;
+			text-decoration : none;
+		}
+		
+		li a:hover {
+			font-style : italic;
+		}
+		
+		ul {
+			list-style-type : none;
+			margin : 0;
+			padding : 0;
+			overflow : hidden;
 		}
 
 	</style>
@@ -19,13 +69,21 @@
 
 <body>
 
-	<div>
+	<div id="box">
+	
 		<p>
 			nate trank
 		</p>
-		<a href="www.instagram.com/n9te">n9te</a>
-	</div>
+		
+	</div> <! end of box >
 
+	<div id="links">
+		<ul>
+			<li><a href="projectx.html"><font color="#B249DB">projects</font></a></li>
+			<li><a href="about.html"><font color="#09D4D3">about</font></a></li>
+			<li><a href="contact.html"><font color="#F09B14">contact</font></a></li>
+		</ul>
+	</div> <! end of links>
 </body>
 	
 </html>
