added link to name

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
 			color : #FFFFFF;
 		}
 		
+		#box a {
+			color : #FFFFFF;
+			text-decoration : none;
+		}
+		
 		#box p:hover {
 			font-style : italic;
-			color : #FFFFFF;
 		}
 		
 		#links {
@@ -72,18 +76,18 @@
 	<div id="box">
 	
 		<p>
-			nate trank
+			<a href="index.html">nate trank</a>
 		</p>
 		
 	</div> <! end of box >
 
 	<div id="links">
 		<ul>
-			<li><a href="projectx.html"><font color="#B249DB">projects</font></a></li>
+			<li><a href="projects.html"><font color="#B249DB">projects</font></a></li>
 			<li><a href="about.html"><font color="#09D4D3">about</font></a></li>
 			<li><a href="contact.html"><font color="#F09B14">contact</font></a></li>
 		</ul>
-	</div> <! end of links>
+	</div> <! end of links >
 </body>
 	
 </html>
