--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 			font-family : "Courier New";
 		}
 		
+		.centered {
+			position : absolute;
+			top : 50%;
+			left : 50%;
+			margin-top: -50px;
+			margin-left: -250px;
+		}
+		
 		#box {
 			background : #200803;
 			padding-left : 0px;
@@ -21,8 +29,6 @@
 			padding-bottom : 14px;
 			height : 100px;
 			width : 500px;
-			margin-left : 390px;
-			margin-top : 200px;
 			font-size : 40px;
 			text-align : center;
 			color : #FFFFFF;
@@ -40,7 +46,6 @@
 		#links {
 			padding-left : 0px;
 			width : 500px;
-			margin-left : 390px;
 			margin-top : 15px;
 			font-size : 18px;
 			text-align : center;
@@ -72,7 +77,7 @@
 </head>
 
 <body>
-
+<div class="centered">
 	<div id="box">
 	
 		<p>
@@ -88,6 +93,7 @@
 			<li><a href="contact.html"><font color="#F09B14">contact</font></a></li>
 		</ul>
 	</div> <! end of links >
+</div>
 </body>
 	
 </html>
