--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,14 @@
 			font-family : "Courier New";
 		}
 		
+		.centered {
+			position : absolute;
+			top : 50%;
+			left : 50%;
+			margin-top: -50px;
+			margin-left: -250px;
+		}
+		
 		#box {
 			background : #200803;
 			padding-left : 0px;
@@ -39,7 +47,7 @@
 <head>
 
 <body>
-
+<div class="centered">
 	<div id="box">
 	
 		<p>
@@ -47,5 +55,5 @@
 		</p>
 		
 	</div> <! end of box >
-
+</div>
 </body>
