starting to fill out other pages

--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
 		
 		.centered {
 			position : absolute;
-			top : 50%;
+			top : 5%;
 			left : 50%;
-			margin-top: -50px;
+			margin-top: -10px;
 			margin-left: -250px;
 		}
 		
@@ -42,6 +42,35 @@
 		#box p:hover {
 			font-style : italic;
 		}
+		
+		#infos {
+			padding-left : 0px;
+			width : 500px;
+			margin-top : 15px;
+			font-size : 18px;
+			text-align : center;
+		}
+		
+		li {
+			float : center;
+		}
+		
+		li a {
+			text-align : center;
+			padding : 10px 10px;
+			text-decoration : none;
+		}
+		
+		li a:hover {
+			font-style : italic;
+		}
+		
+		ul {
+			list-style-type : none;
+			margin : 0;
+			padding : 0px;
+			overflow : hidden;
+		}
 	
 	</style>
 <head>
@@ -51,9 +80,23 @@
 	<div id="box">
 	
 		<p>
-			<a href="index.html">not done sry</a>
+			<a href="index.html">about me</a>
 		</p>
 		
 	</div> <! end of box >
+	
+	<div id="infos">
+		<ul>
+			<li>
+				<font color="#B249DB">background</font>
+				<font color="#000000"> i am a third year at cal poly san luis obispo, studying computer science with a concentration in interactive entertainment.
+			</li>
+			<li>
+				<font color="#09D4D3">interests</font>
+				<font color="#000000">bouldering, music, games</font>
+			</li>
+			
+		</ul>
+	</div> <! end of links >
 </div>
 </body>
