--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 		
 		.centered {
 			position : absolute;
-			top : 50%;
+			top : 5%;
 			left : 50%;
-			margin-top: -50px;
+			margin-top: -10px;
 			margin-left: -250px;
 		}
 		
@@ -42,6 +42,35 @@
 		#box p:hover {
 			font-style : italic;
 		}
+		
+		#links {
+			padding-left : 0px;
+			width : 500px;
+			margin-top : 15px;
+			font-size : 18px;
+			text-align : center;
+		}
+		
+		li {
+			float : center;
+		}
+		
+		li a {
+			text-align : center;
+			padding : 10px 10px;
+			text-decoration : none;
+		}
+		
+		li a:hover {
+			font-style : italic;
+		}
+		
+		ul {
+			list-style-type : none;
+			margin : 0;
+			padding : 0px;
+			overflow : hidden;
+		}
 	
 	</style>
 <head>
@@ -51,9 +80,40 @@
 	<div id="box">
 	
 		<p>
-			<a href="index.html">not done sry</a>
+			<a href="index.html">contact info</a>
 		</p>
 		
 	</div> <! end of box >
+	
+	<div id="links">
+		<ul>
+			<li>
+				<font color="#B249DB">personal email: </font>
+				<font color="#000000">tranknate@gmail.com</font>
+			</li>
+			<li>
+				<font color="#09D4D3">university email: </font>
+				<font color="#000000">ntrank@calpoly.edu</font>
+			</li>
+			<li>
+				<a href="github.com/natetrank">
+				<font color="#F09B14">github: </font>
+				<font color="#000000">natetrank</font>
+				</a>
+			</li>
+			<li>
+				<a href="https://linkedin.com/in/nate-trank-853226139/">
+				<font color="#B249DB">linkedin: </font>
+				<font color="#000000">natetrank</font>
+				</a>
+			</li>
+			<li>
+				<a href="instagram.com/n9te">
+				<font color="#09D4D3">instagram: </font>
+				<font color="#000000">n9te</font>
+				</a>
+			</li>
+		</ul>
+	</div> <! end of links >
 </div>
 </body>
