--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<div id="box">
 	
 		<p>
-			<a href="index.html">nate trank</a>
+			<a href="www.natetrank.com">nate trank</a>
 		</p>
 		
 	</div> <! end of box >
