fixed contact links

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
 				<font color="#000000">ntrank@calpoly.edu</font>
 			</li>
 			<li>
-				<a href="github.com/natetrank">
+				<a href="https://github.com/natetrank">
 				<font color="#F09B14">github: </font>
 				<font color="#000000">natetrank</font>
 				</a>
@@ -108,7 +108,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="instagram.com/n9te">
+				<a href="https://instagram.com/n9te">
 				<font color="#09D4D3">instagram: </font>
 				<font color="#000000">n9te</font>
 				</a>
