finishing contact and about and adding resume

--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
 		}
 		
 		li {
+			margin: 20px 0;
 			float : center;
 		}
 		
@@ -88,12 +89,19 @@
 	<div id="infos">
 		<ul>
 			<li>
-				<font color="#B249DB">background</font>
-				<font color="#000000"> i am a third year at cal poly san luis obispo, studying computer science with a concentration in interactive entertainment.
+				<a href="pdfs/Resume.pdf">
+				<font color="#B249DB">resume</font>
+				</a>
 			</li>
 			<li>
-				<font color="#09D4D3">interests</font>
-				<font color="#000000">bouldering, music, games</font>
+				<font color="#000000">I am a third year at Cal Poly San Luis Obispo, studying computer science with a concentration in interactive entertainment.</font>
+			</li>
+			<li>
+				<font color="#000000">I grew up in West Linn, Oregon and graduated from West Linn High School in 2016.
+			</li>
+			<li>
+				<font color="#09D4D3">interests:</font>
+				<font color="#000000">math, physics, bouldering, music, video games</font>
 			</li>
 			
 		</ul>
