--- a/contact.html
+++ b/contact.html
@@ -46,12 +46,13 @@
 		#links {
 			padding-left : 0px;
 			width : 500px;
-			margin-top : 15px;
+			margin-top : 16px;
 			font-size : 18px;
 			text-align : center;
 		}
 		
 		li {
+			margin: 8px 0;
 			float : center;
 		}
 		
@@ -88,7 +89,7 @@
 	<div id="links">
 		<ul>
 			<li>
-				<font color="#B249DB">personal email: </font>
+				<font color="#FF0101">personal email: </font>
 				<font color="#000000">tranknate@gmail.com</font>
 			</li>
 			<li>
@@ -103,13 +104,13 @@
 			</li>
 			<li>
 				<a href="https://linkedin.com/in/nate-trank-853226139/">
-				<font color="#B249DB">linkedin: </font>
+				<font color="#8BEC00">linkedin: </font>
 				<font color="#000000">natetrank</font>
 				</a>
 			</li>
 			<li>
 				<a href="https://instagram.com/n9te">
-				<font color="#09D4D3">instagram: </font>
+				<font color="#B249DB">instagram: </font>
 				<font color="#000000">n9te</font>
 				</a>
 			</li>
