improved about page and started projects page

--- a/about.html
+++ b/about.html
@@ -48,6 +48,10 @@
 			width : 500px;
 			margin-top : 15px;
 			font-size : 18px;
+			text-align : left;
+		}
+		
+		#resume {
 			text-align : center;
 		}
 		
@@ -89,19 +93,28 @@
 	<div id="infos">
 		<ul>
 			<li>
-				<a href="pdfs/Resume.pdf">
-				<font color="#B249DB">resume</font>
-				</a>
+				<div id="resume">
+					<a href="pdfs/Resume.pdf">
+					<font color="#B249DB">resume</font>
+					</a>
+				</div>
 			</li>
 			<li>
 				<font color="#000000">I am a third year at Cal Poly San Luis Obispo, studying computer science with a concentration in interactive entertainment.</font>
 			</li>
 			<li>
-				<font color="#000000">I grew up in West Linn, Oregon and graduated from West Linn High School in 2016.
+				<font color="#000000">I grew up in West Linn, Oregon and graduated from West Linn High School in 2016.</font>
+			</li>
+			<li>
+				<font color="#000000">I started working at</font>
+				<a href="https://zonguru.com">
+				<font color="#F09B12">ZonGuru</font>
+				</a>
+				<font color="#000000">in June of 2018, as a project intern.</font>
 			</li>
 			<li>
 				<font color="#09D4D3">interests:</font>
-				<font color="#000000">math, physics, bouldering, music, video games</font>
+				<font color="#000000">math, physics, bouldering, music, games</font>
 			</li>
 			
 		</ul>
